installed hhvm and nginx, disable apache

--- a/_ansible/roles/tools/tasks/main.yml
+++ b/_ansible/roles/tools/tasks/main.yml
@@ -3,5 +3,5 @@
   apt: name=vim state=present
 - name: install zsh
   apt: name=zsh state=present
-- name: make zsh default shell
-  shell: chsh -s $(which zsh)
+- name: make zsh default shell for user vagrant
+  user: name=vagrant shell=/usr/bin/zsh
