--- a/_ansible/roles/hhvm/handlers/main.yml
+++ b/_ansible/roles/hhvm/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: restart hhvm
   service: name=hhvm enabled=yes state=restarted
+- name: restart nginx
+  service: name=nginx state=restarted
